fixed horozontal scroll issue on mobile

--- a/src/components/titlecard/titleCard.css
+++ b/src/components/titlecard/titleCard.css
@@ -133,12 +133,14 @@
     .rss__titleCard {
         position: inherit;
         width: 100%;
-        height: 200px;
+        min-height: 200px;
         padding-left: 1em;
 
         text-align: left;
 
         justify-content: space-between;
+
+        overflow: hidden;
     }
 
     .rss__titleCard-text h1 {
